integration-tests/@aws-cdk/aws-lambda-python-integration-tests/test/integ.function.vpc.expected.json
{
  "Resources": {
    "myvpc9455A260": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc"
          }
        ]
      }
    },
    "myvpcingressSubnet1Subnet82F0259C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "AvailabilityZone": "test-region-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/ingressSubnet1"
          }
        ]
      }
    },
    "myvpcingressSubnet1RouteTableD6322DD5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/ingressSubnet1"
          }
        ]
      }
    },
    "myvpcingressSubnet1RouteTableAssociation12FE9C06": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcingressSubnet1RouteTableD6322DD5"
        },
        "SubnetId": {
          "Ref": "myvpcingressSubnet1Subnet82F0259C"
        }
      }
    },
    "myvpcingressSubnet1DefaultRoute6FCDFDDF": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcingressSubnet1RouteTableD6322DD5"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myvpcIGW24C0BBAE"
        }
      },
      "DependsOn": [
        "myvpcVPCGWD483DB64"
      ]
    },
    "myvpcingressSubnet2Subnet56945106": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "AvailabilityZone": "test-region-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/ingressSubnet2"
          }
        ]
      }
    },
    "myvpcingressSubnet2RouteTable2112B53A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/ingressSubnet2"
          }
        ]
      }
    },
    "myvpcingressSubnet2RouteTableAssociation08B3BE06": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcingressSubnet2RouteTable2112B53A"
        },
        "SubnetId": {
          "Ref": "myvpcingressSubnet2Subnet56945106"
        }
      }
    },
    "myvpcingressSubnet2DefaultRouteBF3C1EC8": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcingressSubnet2RouteTable2112B53A"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myvpcIGW24C0BBAE"
        }
      },
      "DependsOn": [
        "myvpcVPCGWD483DB64"
      ]
    },
    "myvpcingressSubnet3Subnet5E973EB6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "AvailabilityZone": "test-region-1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/ingressSubnet3"
          }
        ]
      }
    },
    "myvpcingressSubnet3RouteTable84B01952": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/ingressSubnet3"
          }
        ]
      }
    },
    "myvpcingressSubnet3RouteTableAssociation22645059": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcingressSubnet3RouteTable84B01952"
        },
        "SubnetId": {
          "Ref": "myvpcingressSubnet3Subnet5E973EB6"
        }
      }
    },
    "myvpcingressSubnet3DefaultRouteD30AAE70": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcingressSubnet3RouteTable84B01952"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myvpcIGW24C0BBAE"
        }
      },
      "DependsOn": [
        "myvpcVPCGWD483DB64"
      ]
    },
    "myvpcIGW24C0BBAE": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc"
          }
        ]
      }
    },
    "myvpcVPCGWD483DB64": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "InternetGatewayId": {
          "Ref": "myvpcIGW24C0BBAE"
        }
      }
    },
    "myhandlerServiceRole77891068": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
              ]
            ]
          }
        ]
      }
    },
    "myhandlerSecurityGroupF566A239": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatic security group for Lambda Function cdkinteglambdapythonvpcmyhandlerCA7DB4EE",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "myvpc9455A260"
        }
      }
    },
    "myhandlerD202FA8E": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573S3Bucket5DFF2A17"
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573S3VersionKey4E2330F4"
                        }
                      ]
                    }
                  ]
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573S3VersionKey4E2330F4"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        "Role": {
          "Fn::GetAtt": [
            "myhandlerServiceRole77891068",
            "Arn"
          ]
        },
        "Handler": "index.handler",
        "Runtime": "python3.6",
        "VpcConfig": {
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "myhandlerSecurityGroupF566A239",
                "GroupId"
              ]
            }
          ],
          "SubnetIds": [
            {
              "Ref": "myvpcingressSubnet1Subnet82F0259C"
            },
            {
              "Ref": "myvpcingressSubnet2Subnet56945106"
            },
            {
              "Ref": "myvpcingressSubnet3Subnet5E973EB6"
            }
          ]
        }
      },
      "DependsOn": [
        "myhandlerServiceRole77891068"
      ]
    }
  },
  "Parameters": {
    "AssetParameters94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573S3Bucket5DFF2A17": {
      "Type": "String",
      "Description": "S3 bucket for asset \"94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573\""
    },
    "AssetParameters94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573S3VersionKey4E2330F4": {
      "Type": "String",
      "Description": "S3 key for asset version \"94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573\""
    },
    "AssetParameters94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573ArtifactHashA5E62729": {
      "Type": "String",
      "Description": "Artifact hash for asset \"94754b2f276800442d199c45b0bf611b9ed8b4d1f6d2acdf6bf5cbeed6176573\""
    }
  },
  "Outputs": {
    "FunctionArn": {
      "Value": {
        "Fn::GetAtt": [
          "myhandlerD202FA8E",
          "Arn"
        ]
      }
    }
  }
}
